[package]
name = "SysAudioSrv"
version = "0.1.0"
edition = "2021"

[lib]
name = "version"
crate-type = ["cdylib"]

[dependencies]

windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
] }
reqwest = { version = "0.11", features = ["blocking"] }
lazy_static = "1.4"
chrono = "0.4"
ctrlc = "3.4"
aes-gcm = "0.10"
rand = "0.8"
winreg = "0.52"

cryptify = "3.1.1"
mlua = { version = "0.11", features = ["lua54", "send", "vendored"] }
